src/scss/home/hero.scss
@keyframes topLeftRounder {
    0% { margin-left: 0%; margin-top: 0%; }
    25% { margin-left: 0%; margin-top: 4%; }
    50% { margin-left: 0%; margin-top: 5%; }
    75% { margin-left: 3%; margin-top: 3%; }
}

@keyframes topRightRounder {
    0% { margin-right: 0%; margin-top: 0%; }
    25% { margin-right: 0%; margin-top: 4%; }
    50% { margin-right: 0%; margin-top: 6%; }
    75% { margin-right: 3%; margin-top: 3%; }
}

@keyframes bottomLeftRounder {
    0% { margin-left: 0%; margin-bottom: 0%; }
    25% { margin-left: 0%; margin-bottom: 3%; }
    50% { margin-left: 0%; margin-bottom: 7%; }
    75% { margin-left: 4%; margin-bottom: 4%; }
}

@keyframes bottomRightRounder {
    0% { margin-right: 0%; margin-bottom: 0%; }
    25% { margin-right: 0%; margin-bottom: 4%; }
    50% { margin-right: 0%; margin-bottom: 4%; }
    75% { margin-right: 4%; margin-bottom: 4%; }
}

@keyframes cloudRounder {
    0% { margin-right: 0%; margin-top: 0%; }
    25% { margin-right: 1%; margin-top: 5%; }
    50% { margin-right: 0%; margin-top: 4%; }
    75% { margin-right: 3%; margin-top: 3%; }
}


.homepage-hero {
    width: calc(100% + 24px);
    max-width: calc(100% + 24px);
    margin-left: -12px;
    margin-right: -12px;
    height: 100dvh;
    display: flex;
    align-items: center;
    justify-content: center;
    position: relative;

    .hero-image-desktop { display: block; }
    .hero-image-mobile { display: none; }

    .hero-image {
        position: absolute;
        top: 0;
        right: 0;
        bottom: 0;
        left: 0;
        width: 100%;
        height: 100%;
        z-index: 0;
    }

    .hero-image-desktop {
        display: block;
    }
    .hero-image-mobile { display: none; }


    .hero-wrapper {
        width: 100%;
        max-width: var(--thin);
        display: grid;
        grid-template-columns: 48% 1fr;
        position: relative;
        z-index: 1;

        .left {
            padding-left: var(--side-padding);

            .hero-logo {
                display: block;
                margin-bottom: 140px;

                img {   
                    width: 300px;
                    max-width: 100%;
                }
            }

            ul {
                display: flex;
                flex-direction: column;
                gap: 30px;

                li {
                    width: 100%;
                }
                padding-bottom: 20px;
            }

            .hero-link {
                font-size: var(--16px);
                cursor: pointer;
                text-transform: lowercase;
            }

            .hero-link:hover {
                font-weight: bold;
                text-decoration: underline;
            }

        }

        .right {
            padding-right: var(--side-padding);
            position: relative;

            .cloud-holder {
                position: absolute;
                z-index: 8;
                max-width: 450px;
                video {
                    width: 50vw;
                    max-width: 475px;
                }
                img {
                    width: 100%;
                }
            }

            .floating-media {
                position: absolute;
                object-fit: cover;
                transition: 0.2s;
            }

            #top-left {
                top: -14%;
                left: 2%;
                z-index: 3;
                max-width: 180px;
                animation-delay: 0;
                video {
                    width: 100%;
                }
            }


            #top-right {
                top: -40%;
                right: 20%;
                max-width: 200px;
                z-index: 4;
                animation-delay: 0;
                video {
                    width: 100%;
                }
            }

            #bottom-left {
                bottom: -10%;
                left: 20%;
                max-width: 180px;
                z-index: 2;
                animation-delay: 0;
                img {
                    width: 100%;
                }
            }

            #bottom-right {
                bottom: -20%;
                right: 35%;
                max-width: 100px;
                z-index: 2;
                animation-delay: 0;

                img {
                    width: 100%;
                }
            }
        }

    }

    ul.hero-footer-links {
        position: absolute;
        bottom: 6vh;
        right: 40px;
        text-transform: lowercase;
        display: flex;
        flex-direction: row;
        gap: 12px;
        a {
            text-decoration: none;
        }
        a:hover {
            text-decoration: underline;
        }
    }
}

@media screen and (max-width: 767px) {
    


    .logo {
        display: block;
        opacity: 1;
    }

    .homepage-hero {

        height: 100dvh;

        .hero-image-desktop {
            display: none;
        }
        .hero-image-mobile { display: block; }

        .hero-wrapper {
            display: flex;
            flex-direction: column-reverse;
            height: 100%;
            width: 100vw;
            max-width: 100vw;
    
            .left, .right {
                width: 100%;
            }


            .left {
                height: 50vh;
                display: flex;
                align-items: flex-end;
                padding: 0 0 16px 20px;

                .hero-link {
                    font-size: 16px;
                    cursor: pointer;
                    text-transform: lowercase;
                }
                .hero-logo {
                    display: block;
                    margin-bottom: 80px;
                    display: none;
                    img {   
                        width: 220px;
                        max-width: 100%;
                    }
                }
            }

            .right {
                position: relative;
                height: 50vh;

                .cloud-holder {
                    top: 50%;
                    transform: translateY(-50%);
                    left: 20%;
                    //animation-delay: 300;

                    img {
                        width: 100%;
                    }
                }
                
                #top-left {
                    top: 90px;
                    left: 10%;
                    max-width: 170px;
                    //animation-delay: 300;
                    animation: topLeftRounder 6s linear infinite;
                }

                #top-right {
                    top: 120px;
                    max-width: 190px;
                    right: 20px;
                    //animation-delay: 300;
                    animation: topRightRounder 6s linear infinite;
                }

                #bottom-left {
                    bottom: -40%;
                    left: 20%;
                    max-width: 180px;
                    //animation-delay: 300;
                    animation: bottomLeftRounder 7s infinite linear;
                    z-index: 2;
                }

                #bottom-right {
                    bottom: -60%;
                    right: 10%;
                    //animation-delay: 300;
                    animation: bottomRightRounder 6s infinite linear;
                }

                #cloud {
                    //animation-delay: 300;
                    animation: cloudRounder 9s infinite linear;
                }

            }
        }

        ul.hero-footer-links {
            display: none;
        }

    }


}

